collectd (5.8.1-1) UNRELEASED; urgency=medium

  * New upstream release.
  * debian/patches:
    - Remove rd_kafka_last_error.patch; applied upstream.
  * debian/control:
    - Bump standards version to 4.2.1; no changes.
  * debian/rules:
    - Fix cross building: de-confuse build/host; thanks to Helmut Grohne for
      reporting this and providing a patch (Closes: #913668).

 -- Sebastian Harl <tokkee@debian.org>  Thu, 22 Nov 2018 22:56:32 +0100

collectd (5.8.0-5.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix "ftbfs with GCC-8":
    debian/rules: build with -Wno-error=format-truncation as a temporary
    workaround for the build failure with gcc-8 caused by a compiler warning.
    (Closes: #897724)

 -- gregor herrmann <gregoa@debian.org>  Mon, 06 Aug 2018 20:43:05 +0200

collectd (5.8.0-5.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix "FTBFS: sed: can't read /usr/lib/pkgconfig/OpenIPMIpthread.pc:
    No such file or directory":
    Drop hack for broken OpenIPMIpthread.pc from debian/rules; apparently the
    problem in #474087 was fixed in 2010.
    (Closes: #900232)

 -- gregor herrmann <gregoa@debian.org>  Fri, 29 Jun 2018 19:42:43 +0200

collectd (5.8.0-5) unstable; urgency=medium

  * debian/rules:
    - remove legacy libtool1 build option, as support got dropped in collectd
      5.8.
    - disable varnish plugin until #879471 gets fixed.
  * debian/control:
    - Bump Standards-Version to 4.1.4.

 -- Marc Fournier <marc@bl.uem.li>  Fri, 04 May 2018 16:52:07 +0200

collectd (5.8.0-4) unstable; urgency=medium

  * debian/rules:
    - Fix the arch selection for enabling the gRPC plugin. By accident, we
      disabled it for exactly the wrong archs. Thanks to Adrian Bunk for
      reporting this! (Closes: #892166)

 -- Sebastian Harl <tokkee@debian.org>  Tue, 06 Mar 2018 22:19:38 +0100

collectd (5.8.0-3) unstable; urgency=medium

  * debian/control: