@@ -33,7 +33,6 @@ Build-Depends: debhelper (>= 9.20160709~), dpkg-dev (>= 1.14.10), po-debconf, dh
  libmicrohttpd-dev,
  libmodbus-dev,
  libmongoc-dev,
- libmosquitto-dev,
  libmnl-dev [linux-any],
  libnotify-dev,
  libopenipmi-dev,
