@@ -89,8 +89,12 @@ confflags += --disable-xmms
 confflags += --disable-sigrok
 
 # temporarily disable varnish plugin, as #879471 blocks collectd from
-# migrationg to testing.
+# migrating to testing.
 confflags += --disable-varnish
+
+# temporarily disable mqtt plugin, as #911265, #911266 blocks collectd from
+# migrating to testing.
+confflags += --disable-mqtt
 
 # These plugins are Linux-specific.
 ifeq ($(DEB_HOST_ARCH_OS),kfreebsd)
